--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,6 +36,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="HttpManager" />
+
+        <Button
+            android:id="@+id/photoview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="photoview" />
     </LinearLayout>
 
 </ScrollView>
