--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -43,6 +43,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="photoview" />
+
+        <Button
+            android:id="@+id/animatedExpandableListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="AnimatedExpandableListView" />
     </LinearLayout>
 
 </ScrollView>
