--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -50,6 +50,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="AnimatedExpandableListView" />
+        
+         <Button
+            android:id="@+id/timePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="timePicker" />
     </LinearLayout>
 
 </ScrollView>
